--- a/AzureApplication/AzureApi/appsettings.json
+++ b/AzureApplication/AzureApi/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:azure-demo-sql-server.database.windows.net,1433;Initial Catalog=Azure-db;Persist Security Info=False;User ID=sqladmin;Password=Sql@12345;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
+
